# durable-claude-skills

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  worker.py
agent/: __init__.py  agent.py  server.py  skills.py
banking/: __init__.py  service.py
docker/: app.Dockerfile  combined.Dockerfile  web.Dockerfile
scripts/: seed_bank.py  setup_nexus.py  smoke_test.py
skills/money_transfer/: SKILL.md  __init__.py  activities.py  client.py  nexus_impl.py  nexus_service.py  shared.py  workflow.py
skills/money_transfer/tests/: conftest.py  test_money_transfer.py
web/: .env.example  .env.production  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/public/: BRAND.md
web/src/: App.tsx  api.ts  index.css  session.ts  types.ts  vite-env.d.ts
web/src/components/: TemporalLogo.tsx  TransferPlanCard.tsx
