[project]
name = "durable-claude-skills"
version = "0.1.0"
description = "A Claude agent that talks about money transfers while a deterministic Temporal workflow moves the money."
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.7.0",
    "anthropic>=0.40.0",
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
# Run from the repo root so `from banking import service` and friends resolve.
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["skills/money_transfer/tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools]
packages = ["banking", "agent", "skills"]
